# lisp

./: Cargo.toml  README.md  events.ldjson  prelude.lisp
src/: alloc.rs  builtin.rs  env.rs  eval.rs  lib.rs  main.rs  parser.rs  prompt.rs  report.rs  sample.rs
