[package]
name = "lisp"
version = "0.1.0"
authors = ["hgking <hgmaxwellking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
libc = "0.2.106"
linefeed = "0.6"
nom = "7"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
