[package]
name = "oolisp"
version = "0.2.0"
authors = ["hgking <hgmaxwellking@gmail.com>"]
edition = "2018"
description = "LISP loosely based on Daniel Holden's Book; compiles to web assembly to run in the browser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7"
wasm-bindgen = "0.2"
